--- a/src/App.scss
+++ b/src/App.scss
@@ -23,11 +23,40 @@ $transition-setting: height 1500ms 1500ms, opacity 1500ms 0ms;
   color: #09d3ac;
 }
 
+button.nav_expander {
+  line-height: 10px;
+  padding: 0px 10px 20px 10px;
+  font-weight: bold;
+  font-size: 32px;
+  height: 46px;
+  cursor: pointer;
+  background-color:transparent;
+  border: none;
+
+  position: fixed;
+  right: 46px;
+  top: 30px;
+  z-index: 3;
+
+  span {
+    margin-top: -10px;
+    display: block;
+  }
+
+  span.default {
+  }
+
+  span.expanded {
+    display: none;
+  }
+}
+
 nav{
   background-color: #C55;
   width: 388px;
   right: 46px;
   position: fixed;
+  z-index: 2;
 
   > ul {
     padding-top: 31px;
@@ -56,33 +85,6 @@ nav{
   }
 }
 
-button.nav_expander {
-  line-height: 10px;
-  padding: 0px 10px 20px 10px;
-  font-weight: bold;
-  font-size: 32px;
-  height: 46px;
-  cursor: pointer;
-  background-color:transparent;
-  border: none;
-
-  position: fixed;
-  right: 46px;
-  top: 30px;
-
-  span {
-    margin-top: -10px;
-    display: block;
-  }
-
-  span.default {
-  }
-
-  span.expanded {
-    display: none;
-  }
-}
-
 .show{
   opacity:1;
   height: inherit;
@@ -98,9 +100,21 @@ button.nav_expander {
 
 section {
   margin:43px;
+  margin-left: auto;
+    margin-right: auto;
+
+  img.header-img{
+    max-width:40vw;
+    min-width:100px;
+    max-height: 40vh;
+  }
+
+  p {
+    color: #444;
+  }
 
   .wp-block-button__link{
-    background-color: #ec1919;
+    background-color: #9c0d0d;
     width: 272px;
     height: 48px;
     display: block;
@@ -112,6 +126,12 @@ section {
     font-size: 30px;
     font-family: calibri;
     padding-top: 9px;
+  }
+
+  a:active, a:focus {
+    outline: 0;
+    border: none;
+    -moz-outline-style: none;
   }
 }
 
@@ -132,64 +152,3 @@ section {
     margin-right:129px;
   }
 }
-
-
-/*
-.TopNavMenu-hamburger {
-  position: absolute;
-  z-index: 100;
-  right: 10px;
-  cursor: pointer;
-  transform-origin: 20% 50%;
-  opacity: 1;
-  transform: scaleX(0);
-  transition: 250ms opacity 200ms cubic-bezier(0.19, 1, 0.22, 1), 250ms transform 200ms cubic-bezier(0.19, 1, 0.22, 1);
-  width: 44px;
-  height: 44px;
-}
-.isDesktop .TopNavMenu-hamburger:hover div:after {
-  transform: scaleX(1);
-}
-@media (min-width: 1280px) {
-  .TopNavMenu-hamburger {
-    right: -48px;
-    top: -3px;
-    transform-origin: 10px 50%;
-  }
-}
-@media (min-width: 1152px) and (max-width: 1279px) {
-  .TopNavMenu-hamburger {
-    right: -48px;
-    top: -5px;
-    transform-origin: 10px 50%;
-  }
-}
-@media (min-width: 1024px) and (max-width: 1151px) {
-  .TopNavMenu-hamburger {
-    right: -48px;
-    top: -6px;
-    transform-origin: 10px 50%;
-  }
-}
-@media (min-width: 768px) and (max-width: 1023px) {
-  .TopNavMenu-hamburger {
-    top: -8px;
-    right: -43px;
-    transform-origin: 12px 50%;
-  }
-}
-@media (min-width: 667px) and (max-width: 767px) {
-  .TopNavMenu-hamburger {
-    top: -6px;
-    right: -42px;
-    transform-origin: 12px 50%;
-  }
-}
-@media (max-width: 666px) {
-  .TopNavMenu-hamburger {
-    right: 18px;
-    top: -8px;
-    transform-origin: 10px 50%;
-  }
-}
-*/
