--- a/src/App.scss
+++ b/src/App.scss
@@ -141,14 +141,14 @@ article {
     padding-top: 9px;
   }
 
-  .wpforms-submit{
+  form button{
     border:none;
     height: 57px;
     padding-top: 0px;
     cursor: pointer;
   }
 
-  .wpforms-submit:hover{
+  form button:hover{
     text-decoration:underline;
   }
 
@@ -198,26 +198,32 @@ article {
     }
   }
 
-  .wpforms-field-label{
+  label{
     clear: both;
     display: block;
     font-weight: bold;
     color: #444;
-    font-size: 13pt;
-    padding-bottom: 3pt;
+    font-size: 14pt;
+    padding-bottom: 5px;
 
     .wpforms-required-label{
       color:#C00;
     }
   }
 
-  .wpforms-field-medium{
+
+
+  select, input, textarea{
     font-size: 12pt;
     width: 80%;
     min-width: 200px;
-    padding: 8pt;
+    padding: 9pt;
     margin-bottom: 14pt;
-    border: #BBB thin solid;
+    border: #CCC thin solid;
+  }
+
+  select{
+    width: calc(80% + 23px);
   }
 }
 
