--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,9 @@
 
 $transition-setting: height 1500ms 1500ms, opacity 1500ms 0ms;
 
+body {
+  font-family: calibri;
+}
 
 button:focus {
   outline: 0 !important;
@@ -49,10 +52,10 @@ button.nav_expander {
     margin-top: -10px;
     display: block;
   }
-
+/*
   span.default {
   }
-
+*/
   span.expanded {
     display: none;
   }
@@ -132,7 +135,7 @@ article {
     height: 48px;
     display: block;
     text-align: center;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
     text-decoration: none;
     color: white;
     font-weight: bold;
@@ -165,6 +168,7 @@ article {
   a:active, a:focus {
     outline: 0;
     border: none;
+    outline-style: none;
     -moz-outline-style: none;
   }
 
@@ -211,8 +215,6 @@ article {
     }
   }
 
-
-
   select, input, textarea{
     font-size: 12pt;
     width: 80%;
@@ -225,6 +227,104 @@ article {
   select{
     width: calc(80% + 23px);
   }
+}
+
+$modal-bg: #343434;
+$modal-overlay-bg: #EEEEEEAA;
+
+.Modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: $modal-bg;
+  min-width: 320px;
+  min-height: 450px;
+  width: 60%;
+  height: 50%;
+  max-width: 700px;
+  border-radius: 4px;
+
+  color: white;
+
+  button{
+    cursor:pointer;
+  }
+
+  .modal-header{
+    text-align: right;
+
+    button{
+      border: none;
+      background-color: transparent;
+      line-height: 43px;
+      height: 43px;
+
+      span{
+        color: #555;
+        font-weight: normal;
+        font-family: auto;
+        font-size:4em;
+
+        &:hover{
+          color:#AAA;
+        }
+      }
+    }
+  }
+
+  .modal-title{
+    font-size: 70px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
+
+  .modal-body{
+    text-align: center;
+    font-size: 24px;
+    font-weight: normal;
+    
+    p {
+      font-size: 36px;
+      color: #FFF9;
+    }
+  }
+
+  .modal-footer{
+    text-align:center;
+
+    button{
+      width: 176px;
+      height: 57px;
+      background-color: #eeeeee;
+      border:none;
+      font-size: 30px;
+      color: $modal-bg;
+      font-weight: bold;
+
+      &:hover {
+        background-color: white;
+        color: black;
+      }
+    }
+  }
+}
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $modal-overlay-bg;
+  animation-name: example;
+  animation-duration: 1s;
+  z-index: 4;
+}
+
+@keyframes example {
+  from {background-color: black; opacity:0;}
+  to {background-color: $modal-overlay-bg; opacity: initial;}
 }
 
 @media only screen and (min-width: 768px) {
