--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 @import "./../node_modules/sass-autoprefixer/scss/prefixes";
 
-@import './../NavBar.scss';
+@import './../NavBar';
+
+@import './ReactiveForm/index';
 
 body {
   font-family: calibri;
@@ -57,10 +59,13 @@ article {
     font-size: 16pt;
   }
 
+  .wp-block-button__link, & .wpforms-submit{
+    height: 48px;
+  }
+
   .wp-block-button__link, & .wpforms-submit, & .wpcf7-form-control.wpcf7-submit{
     background-color: #9c0d0d;
     width: 272px;
-    height: 48px;
     display: block;
     text-align: center;
     /*vertical-align: middle;*/
@@ -86,22 +91,6 @@ article {
     }
   }
 
-  & .wpcf7-form-control.wpcf7-submit{
-    height: 57px;
-    border: none;
-  }
-
-  form button{
-    border:none;
-    height: 57px;
-    padding-top: 0px;
-    cursor: pointer;
-  }
-
-  form button:hover{
-    text-decoration:underline;
-  }
-
   a{
     text-decoration: none;
     color:black;
@@ -110,13 +99,13 @@ article {
     &:hover{
       text-decoration:underline;
     }
-  }
 
-  a:active, a:focus {
-    outline: 0;
-    border: none;
-    outline-style: none;
-    -moz-outline-style: none;
+    &:active, &:focus {
+      outline: 0;
+      border: none;
+      outline-style: none;
+      -moz-outline-style: none;
+    }
   }
 
   .before-section{
@@ -149,36 +138,6 @@ article {
     }
   }
 
-  label{
-    clear: both;
-    display: block;
-    font-weight: bold;
-    color: #444;
-    font-size: 14pt;
-    padding-bottom: 5px;
-
-    .wpforms-required-label{
-      color:#C00;
-    }
-  }
-
-  select, input, textarea{
-    font-size: 12pt;
-    width: 80%;
-    min-width: 200px;
-    padding: 9pt;
-    margin-bottom: 14pt;
-    border: #CCC thin solid;
-
-    &:invalid {
-      background-color: pink;
-      border-color:red;
-    }
-  }
-
-  select{
-    width: calc(80% + 23px);
-  }
 }
 
 $modal-bg: #343434;
@@ -304,12 +263,23 @@ $modal-overlay-bg: #EEEEEEAA;
 
 @media only screen and (min-width: 1152px) {
   article {
-    /*
-    margin-left:129px;
-    margin-right:129px;
-    */
-    /*margin-left: 16%;
-    margin-right: 16%;*/
     width: 66%;
+
+    &#\/home\/{
+      width: 50%;
+      margin-left: auto;
+  
+      h2{
+        font-size: 38pt;
+      }
+
+      p {
+        font-size: 25pt;
+      }
+
+      img.header-img{
+        max-height: 33vh;
+      }
+    }
   }
 }
