--- a/src/PortfolioCaseStudies.scss
+++ b/src/PortfolioCaseStudies.scss
@@ -15,6 +15,10 @@ ul#pfhub_portfolio_portfolio_popup_list_1{
       font-size: 32pt;
     }
 
+    h6{
+      font-size: 24pt;
+    }
+
     .description{
       ul {
         margin-bottom: 50px;
