--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import './../NavBar';
 @import './ReactiveForm/index';
 @import './PortfolioCaseStudies';
+@import './AboutUs';
 @import './PageFooter';
 
 body {
@@ -137,13 +138,6 @@ article {
           opacity:50%;
         }
       }
-    }
-  }
-
-  &.about-us{
-
-    h3{
-      margin-top: 4em;
     }
   }
 }
