--- a/src/AboutUs.scss
+++ b/src/AboutUs.scss
@@ -2,6 +2,12 @@ article.about-us{
 
   figure{
     margin-left: 0;
+
+    max-width: 80vw;
+
+    img{
+      max-width: inherit;
+    }
   }
 
   h3{
