moving of NavBar.scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 @import './sass-vars';
 
 @import './Modal';
-@import './../NavBar';
+@import './NavBar';
 @import './ReactiveForm/index';
 @import './PortfolioCaseStudies';
 @import './AboutUs';
