--- a/src/Modal.scss
+++ b/src/Modal.scss
@@ -1,21 +1,24 @@
 
 $modal-bg: #343434;
-$modal-overlay-bg: #EEEEEEAA;
+$modal-overlay-bg: #343434DF;
 
 .Modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: $modal-bg;
+  background-color: transparent;
   min-width: 320px;
   min-height: 450px;
-  width: 60%;
+  width: 80%;
   height: 65%;
-  max-width: 700px;
+
+  height: calc(95vh - 64px);
   border-radius: 4px;
 
   color: white;
+
+  outline-width: 0px;
 
   button{
     cursor:pointer;
@@ -31,10 +34,10 @@ $modal-overlay-bg: #EEEEEEAA;
       height: 43px;
 
       span{
-        color: #555;
+        color: #EEE;
         font-weight: normal;
         font-family: auto;
-        font-size:4em;
+        font-size:5em;
 
         &:hover{
           color:#AAA;
@@ -59,10 +62,71 @@ $modal-overlay-bg: #EEEEEEAA;
       width: auto;
       filter: invert(1);
     }
+
+    .pfhub-portfolio-popup-wrapper{
+      width: 100%;
+
+      .image-block{
+        float: left;
+
+        /*height: 500px;*/
+        width: 55%;
+
+        img{
+          max-height: 66vh;
+          margin-top: 1.45em;
+        }
+      }
+
+      .right-block{
+        float: left;
+        width: calc(42.8% - 60px);
+        margin-left: 60px;
+        text-align: left;
+
+        ul{
+          &.thumbs-list{
+            padding-left: 0px;
+          }
+
+          li {
+            list-style-type: none;
+            display: inline-block;
+          }
+        }
+
+        button {
+          background-color: transparent;
+          border: none;
+        }
+
+        img {
+          width: 75px;
+          height: 75px;
+        }
+      }
+    }
     
     p {
       font-size: 36px;
       color: #FFF9;
+    }
+
+    .rec.rec-arrow{
+      background-color: rgba(66, 66, 66, 0.33);
+    }
+
+    .rec.rec-pagination{
+      button.rec-dot{
+        height: 25px;
+        width: 25px;
+        box-shadow: none;
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+
+      button.rec.rec-dot_active{
+        background-color: rgba(255, 255, 255, 0.62);
+      }
     }
   }
 
