css bugfix for logo presentation section of companies we have done work for.

--- a/src/App.scss
+++ b/src/App.scss
@@ -140,7 +140,7 @@ article {
           height: inherit;
           width: 95%;
           filter: grayscale(1);
-          opacity:50%;
+          opacity:0.5;
         }
       }
     }
