vastly improved portfolio cache handling

--- a/src/PortfolioCaseStudies.scss
+++ b/src/PortfolioCaseStudies.scss
@@ -3,7 +3,7 @@ article.case-studies{
     margin-bottom: 0px;
   }
   
-  ul, pfhub-portfolio-rendered{
+  ul, pfhub-portfolio{
     padding-left: 0;
     display: flex;
     flex-wrap: wrap;
