--- a/src/Modal.scss
+++ b/src/Modal.scss
@@ -64,15 +64,18 @@ $modal-overlay-bg: #343434DF;
     }
 
     .pfhub-portfolio-popup-wrapper{
-      width: 100%;
+      width: 90%;
 
       .image-block{
         float: left;
 
         /*height: 500px;*/
         width: 55%;
+        min-width:500px;
 
         img{
+          width: 90%;
+          height: auto;
           max-height: 66vh;
           margin-top: 1.45em;
         }
@@ -87,6 +90,8 @@ $modal-overlay-bg: #343434DF;
         ul{
           &.thumbs-list{
             padding-left: 0px;
+
+            min-width: 50vw;
           }
 
           li {
@@ -103,6 +108,14 @@ $modal-overlay-bg: #343434DF;
         img {
           width: 75px;
           height: 75px;
+        }
+
+        h3.title{
+          min-width: 320px;
+        }
+
+        .description{
+          min-width: 500px;
         }
       }
     }
@@ -147,6 +160,12 @@ $modal-overlay-bg: #343434DF;
         color: black;
       }
     }
+  }
+}
+
+@media (max-width: 1380px) {
+  .Modal .modal-body .pfhub-portfolio-popup-wrapper .image-block img{
+    max-height: 40vh;
   }
 }
 
