fine tuning of heading spacing in the three ring advantage

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 
 @import './Modal';
 @import './NavBar';
+@import './TheThreeRingAdvantage';
 @import './ReactiveForm/index';
 @import './PortfolioCaseStudies';
 @import './AboutUs';
