--- a/src/PageFooter.scss
+++ b/src/PageFooter.scss
@@ -19,7 +19,7 @@ footer{
 
     ul {
       padding-left: 0px;
-      column-count: 2;
+      column-count: 1;
 
       li{
         list-style: none;
@@ -43,6 +43,13 @@ footer{
         }
       }
     }
+
+    @media only screen and (min-width: $thr-medium-screen) {
+      ul {
+        column-count: 2;
+      }
+    }
+
   }
 
   p{
