--- a/src/sass-vars.scss
+++ b/src/sass-vars.scss
@@ -2,6 +2,7 @@
 $thr-max-mobile-portrait-screen: 401px;
 $thr-medium-screen: 768px;
 $thr-big-screen: 1152px;
+$thr-bigger-screen: 1380px;
 
 $thr-fontsize-base: 16pt;
 
