--- a/src/sass-vars.scss
+++ b/src/sass-vars.scss
@@ -1,4 +1,7 @@
 /* SASS variables */
+
+/* screen sizes for media queries */
+$thr-old-mobile-portrait-screen: 321px;
 $thr-max-mobile-portrait-screen: 401px;
 $thr-medium-screen: 768px;
 $thr-big-screen: 1152px;
