moving Calibri font files to new 'special-fonts' subdirectory of the src folder.

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,9 @@ from https://transfonter.org/
     $file_prefix: $font_name;
   }
 
+  /* where are the fonts stored? */
+  $file_prefix: "special-fonts/" + $file_prefix;
+
   @font-face {
     font-family: $font_name;
     src: url($file_prefix +'.eot');
