case studies Modal large image fitting to box

--- a/src/Modal.scss
+++ b/src/Modal.scss
@@ -78,6 +78,8 @@ $modal-overlay-bg: #343434DF;
           height: auto;
           max-height: 66vh;
           margin-top: 1.45em;
+
+          object-fit: cover;
         }
       }
 
