--- a/src/App.scss
+++ b/src/App.scss
@@ -203,6 +203,10 @@ article {
   figure.wp-block-image{
     max-width: 90%;
     margin-top: 4em;
+
+    img{
+      height:auto;
+    }
   }
 
   @media only screen and (max-width: $thr-max-mobile-portrait-screen) {
